--- a/BeingSeenApp/app/src/main/res/layout/activity_donation.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_donation.xml
@@ -58,7 +58,7 @@
 
     <Button
         android:id="@+id/dnt_confirm"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="80dp"
