--- a/BeingSeenApp/app/src/main/res/layout/activity_transfer_to_merchant.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_transfer_to_merchant.xml
@@ -47,7 +47,7 @@
 
   <Button
       android:id="@+id/donateConfirm"
-      android:layout_width="match_parent"
+      android:layout_width="200dp"
       android:layout_height="60dp"
       android:text="Confirm"
       app:layout_constraintBottom_toBottomOf="parent"
