--- a/BeingSeenApp/app/src/main/res/layout/activity_cash_conversion.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_cash_conversion.xml
@@ -6,28 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".CashConversion.CashConversionRequestActivity">
 
-
-  <TextView
-      android:id="@+id/amount"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="50dp"
-      android:layout_marginTop="120dp"
-      android:layout_marginEnd="50dp"
-      android:layout_marginBottom="32dp"
-      android:text="Amount"
-      android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-      android:textColor="@color/black"
+  <RelativeLayout
+      android:id="@+id/textView"
+      android:layout_width="415dp"
+      android:layout_height="740dp"
+      android:background="@drawable/lightbg"
       app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintBottom_toTopOf="@+id/convertConfirm"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.2" />
+      app:layout_constraintVertical_bias="0.077" />
+
+  <TextView
+      android:id="@+id/aboutus_txt"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="32dp"
+      android:layout_marginTop="26dp"
+      android:layout_marginEnd="32dp"
+      android:background="@drawable/pf_info_border"
+      android:padding="18dp"
+      android:text="Please Enter the amount of credits you wish to convert into cash.\n We will e-transfer you the amount through the given email in three business days.
+                        \n (Every credit spent is converted into 1 dollar [Note: There is a 2.7% transaction fee incurred by Stripe])"
+      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+      android:textColor="@color/black"
+      android:typeface="monospace"
+      android:textSize="14dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.011" />
 
   <com.google.android.material.textfield.TextInputLayout
-      android:layout_width="217dp"
+      android:layout_width="300dp"
       android:layout_height="61dp"
       app:layout_constraintBottom_toTopOf="@+id/convertConfirm"
       app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +54,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="#00000000"
+        android:background="@drawable/border"
+
         android:hint="amount"
         android:inputType="textPersonName" />
   </com.google.android.material.textfield.TextInputLayout>
@@ -59,7 +74,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="#00000000"
+        android:background="@drawable/border"
         android:hint="email for your bank account"
         android:inputType="textPersonName" />
   </com.google.android.material.textfield.TextInputLayout>
