--- a/BeingSeenApp/app/src/main/res/layout/fragment_mer_user_profile.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_mer_user_profile.xml
@@ -33,6 +33,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
 
+    <Button
+        android:id="@+id/ButtonConvertCash"
+        android:layout_width="96dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="62dp"
+        android:text="Convert To Cash"
+        android:textSize="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.02"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.00001" />
+
     <RelativeLayout
         android:id="@+id/textView"
         android:layout_width="411dp"
@@ -160,16 +175,5 @@
         </RelativeLayout>
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/ButtonConvertCash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CASH CONVERSION"
-        app:layout_constraintBottom_toBottomOf="@+id/MerPfBalanceFrag"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.802" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
