--- a/BeingSeenApp/app/src/main/res/layout/fragment_conversion_requests_history.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_conversion_requests_history.xml
@@ -27,16 +27,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rq_recycler_view"
-        android:layout_width="400dp"
-        android:layout_height="500dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="391dp"
+        android:layout_height="568dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:background="#DDEEDF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rq_title"
-        app:layout_constraintVertical_bias="0.168" />
+        app:layout_constraintVertical_bias="0.175" />
 </androidx.constraintlayout.widget.ConstraintLayout>
