GMTGAN-98 justify textbox

--- a/BeingSeenApp/app/src/main/res/layout/activity_org_currency_conversion.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_org_currency_conversion.xml
@@ -30,11 +30,12 @@
         android:background="@drawable/transaction_info_border"
         android:padding="18dp"
         android:text="Please Enter the amount of credits you wish to purchase.
-                        \n (Every dollar spent is converted into 1 credit [Note: There is a 2.7% transaction fee incurred by Stripe])"
+                        \n(Every dollar spent is converted into 1 credit [Note: There is a 2.7% transaction fee incurred by Stripe])"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#111111"
         android:textStyle="bold"
         android:textSize="23dp"
+        android:layout_gravity="center_vertical|end"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
