--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_currency_conversion.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_currency_conversion.xml
@@ -23,7 +23,6 @@
     <!--    Code inspired by https://codingwithtashi.medium.com/stripe-payment-integration-with-android-4c588e78f3ea-->
 
 
-
     <TextView
         android:id="@+id/aboutus_txt"
         android:layout_width="0dp"
@@ -31,15 +30,16 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="32dp"
-        android:padding="18dp"
+        android:background="@drawable/transaction_info_border"
 
+        android:padding="18dp"
         android:text="Please Enter the amount of credits you wish to purchase.
-                        \n (Every dollar spent is converted into 1 credit [Note: There is a 2.7% transaction fee incurred by Stripe])"
+                        \n(Every dollar spent is converted into 1 credit [Note: There is a 2.7% transaction fee incurred by Stripe])"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#111111"
-        android:textStyle="bold"
         android:textSize="23dp"
-        android:background="@drawable/transaction_info_border"
+        android:layout_gravity="center_vertical|end"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
