--- a/BeingSeenApp/app/src/main/res/layout/activity_transfer_to_merchant.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_transfer_to_merchant.xml
@@ -6,10 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".SearchForMerchant.TransferToMerchantActivity">
 
+  <com.airbnb.lottie.LottieAnimationView
+      android:id="@+id/loading_lottie_animation_view"
+      android:layout_width="match_parent"
+      android:layout_height="422dp"
+
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/relativeLayoutOuter"
+      app:lottie_autoPlay="true"
+      app:lottie_loop="true"
+      app:lottie_rawRes="@raw/loading_animation" />
+
   <RelativeLayout
-      android:id="@+id/textView"
-      android:layout_width="411dp"
-      android:layout_height="641dp"
+      android:id="@+id/relativeLayoutOuter"
+      android:layout_width="406dp"
+      android:layout_height="732dp"
       android:background="@drawable/testbg4"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -18,7 +31,10 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.077">
 
+
+
     <RelativeLayout
+        android:id="@+id/relativeLayoutInner"
         android:layout_width="351dp"
         android:layout_height="541dp"
         android:layout_alignParentStart="true"
@@ -53,6 +69,7 @@
           app:layout_constraintVertical_bias="0.2" />
 
       <com.google.android.material.textfield.TextInputLayout
+          android:id="@+id/dnDonoAmtFrame"
           android:layout_width="217dp"
           android:layout_height="61dp"
           android:layout_marginStart="70dp"
