--- a/BeingSeenApp/app/src/main/res/layout/request_history_recycler_item.xml
+++ b/BeingSeenApp/app/src/main/res/layout/request_history_recycler_item.xml
@@ -19,7 +19,7 @@ card_view:cardCornerRadius="3dp">
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginStart="0dp"
-        android:text="Goal:"
+        android:text="Amount:"
         android:textColor="@color/black"
         android:textSize="20sp" />
 
