--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_currency_conversion.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_currency_conversion.xml
@@ -7,6 +7,9 @@
     tools:context=".StripeCurrencyConversion.DnCurrencyConversionActivity">
 
 
+    <!--    Code inspired by https://codingwithtashi.medium.com/stripe-payment-integration-with-android-4c588e78f3ea-->
+
+
     <RelativeLayout
         android:id="@+id/textView"
         android:layout_width="414dp"
@@ -14,15 +17,21 @@
         android:background="@drawable/lightbg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.077" />
+        app:layout_constraintVertical_bias="0.666">
 
-
-<!--    Code inspired by https://codingwithtashi.medium.com/stripe-payment-integration-with-android-4c588e78f3ea-->
-
-
+        <com.stripe.android.view.CardMultilineWidget
+            android:id="@+id/cardInputWidget"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="351dp"
+            android:layout_marginBottom="244dp"
+            android:background="@drawable/border" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/aboutus_txt"
@@ -54,7 +63,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.425">
+        app:layout_constraintVertical_bias="0.375">
 
         <EditText
             android:id="@+id/amount_id"
@@ -63,19 +72,6 @@
             android:background="@drawable/border"
             android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
-
-    <com.stripe.android.view.CardInputWidget
-        android:id="@+id/cardInputWidget"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="348dp"
-        android:background="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.193" />
 
     <Button
         android:id="@+id/payButton"
